# hypernewsviewer

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  app.py  config.py  noxfile.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/workflows/: ci.yml
hypernewsviewer/model/: __init__.py
scripts/: editdb.py
src/hypernewsviewer/: app.py  compile.py  core.py
src/hypernewsviewer/_compat/: typing.py
src/hypernewsviewer/filters/: pluralize.py  smartdate.py  urc_icon.py
src/hypernewsviewer/model/: __init__.py  __main__.py  cliutils.py  converter.py  enums.py  messages.py  orm.py  parser.py  structure.py
src/hypernewsviewer/static/: style.css
src/hypernewsviewer/static/Icons/: icons-table
src/hypernewsviewer/static/css/: breadcrumb.css  classic.css  prettylist.css  user.css
src/hypernewsviewer/static/scss/: prettylist.scss
src/hypernewsviewer/templates/: cindex.html  index.html  member.html  members.html  msg.html  root_landing.html  search.html  top.html
src/hypernewsviewer/templates/macros/: banner.html
src/hypernewsviewer/templates/pages/: base.html
src/hypernewsviewer/templates/partials/: footer.html  navigationbar.html  readonly.html
tests/: test_db.py  test_hypernewsviewer.py  test_simplify.py  test_testfiles.py  test_version.py
