[project]
name = "hypernewsviewer"
version = "0.1.0"
description = "A viewer for HyperNews"
authors = [
  {name = "Henry Schreiner", email="henryschreineriii@gmail.com"},
]
requires-python = ">=3.8"

dependencies = [
  "flask>=2.0",
  "markupsafe>=2.0",
  "inflection>=0.5.1",
  "attrs>=21.3.0",
  "cattrs>=1.10.0",
  "python-dateutil",
]

[project.optional-dependencies]
test = ["pytest>=6.2"]
cli = [
  "click>=8",
  "rich>=9.8.0",
]
deploy = [
  "gunicorn>=20.1"
]
dev = [
  "libsass>=0.20.1",
  "pytest>=6.2",
  "click>=8",
  "rich>=9.8.0",
]

[project.scripts]
hyper-model = "hypernewsviewer.model.__main__:main"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = ["inflection", "hypernewsviewer.filters.*"]
ignore_missing_imports = true

[tool.pylint]
master.py-version = "3.8"
master.jobs = "0"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.enable = ["useless-suppression"]
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "wrong-import-position",
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "invalid-name",
  "import-error",
  "no-member",
]
