[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "hypernewsviewer"
version = "0.1.0"
description = "A viewer for HyperNews"
authors = [
  {name = "Henry Schreiner", email="henryschreineriii@gmail.com"},
]
requires-python = ">=3.8"

dependencies = [
  "flask>=2.0",
  "markupsafe>=2.0",
  "inflection>=0.5.1",
  "attrs>=22.1.0",
  "sqlalchemy>=2",
  'typing_extensions>=4.1;python_version<"3.11"'
]

[project.optional-dependencies]
test = [
  "beautifulsoup4",
  "cattrs>=1.10.0",
  "pytest>=6.2",
  "python-dateutil",
  "rich>=9.8.0",
]
cli = [
  "beautifulsoup4",
  "cattrs>=1.10.0",
  "click>=8",
  "python-dateutil",
  "rich>=9.8.0",
]
deploy = [
  "gunicorn>=20.1"
]
dev = [
  "libsass>=0.20.1",
  "pytest>=6.2",
  "click>=8",
  "rich>=9.8.0",
]

[project.scripts]
hyper-model = "hypernewsviewer.model.__main__:main"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]


[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["inflection", "hypernewsviewer.filters.*", "bs4", "sqlalchemy.*"]
ignore_missing_imports = true


[tool.pylint]
master.py-version = "3.8"
master.jobs = "0"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.enable = ["useless-suppression"]
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "wrong-import-position",
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "invalid-name",
  "import-error",
  "no-member",
  "redefined-builtin",
]


[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
]
target-version = "py38"
typing-modules = ["hypernewsviewer._compat.typing"]
src = ["src"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
flake8-unused-arguments.ignore-variadic-names = true

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
